--- a/main.ipynb
+++ b/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1d967416",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "83fffc96",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "38bb3bbb",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "5415961d",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "7ac84cee",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "8418edbe",
    "metadata": {},
    "outputs": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "7589c7ee",
    "metadata": {},
    "outputs": [
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "b094a008",
    "metadata": {},
    "outputs": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "bcc55a1d",
    "metadata": {},
    "outputs": [
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "b68b3226",
    "metadata": {},
    "outputs": [
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "2e3289bf",
    "metadata": {},
    "outputs": [
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "1eeb4913",
    "metadata": {},
    "outputs": [
@@ -702,9 +702,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T-SNE took 4.9 s\n",
-      "PCA took 0.016 s\n",
-      "Truncated SVD took 0.016 s\n"
+      "T-SNE took 4.6 s\n",
+      "PCA took 0.0034 s\n",
+      "Truncated SVD took 0.0046 s\n"
      ]
     },
     {
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "126a7a3b",
    "metadata": {},
    "outputs": [
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "e1e2cf98",
    "metadata": {},
    "outputs": [
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "2e8bfc30",
    "metadata": {},
    "outputs": [
@@ -937,6 +937,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b48bb3b9",
+   "metadata": {},
+   "source": [
+    "ROC AUC"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "78413da9",
@@ -961,11 +969,8 @@
     }
    ],
    "source": [
-    "# Predict probabilities\n",
-    "y_prob_knear = knears_neighbors.predict(X_test)\n",
-    "\n",
     "# Calculate ROC AUC\n",
-    "roc_auc = roc_auc_score(y_test, y_prob_knear)\n",
+    "roc_auc = roc_auc_score(y_test, y_pred_knear)\n",
     "\n",
     "# Print ROC AUC\n",
     "print('ROC AUC Score:', roc_auc)\n",
