--- a/main.ipynb
+++ b/main.ipynb
@@ -779,7 +779,9 @@
    "id": "1519aa85",
    "metadata": {},
    "source": [
-    "### 2. Applying KNN"
+    "### 2. Applying KNN\n",
+    "\n",
+    "KNN doesn't require training, because it is a \"lazy learner\" but, because I wanted to create a code that could be generalized and used for other algorthms to compare performance, I divided the sample in train and test "
    ]
   },
   {
@@ -946,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "78413da9",
    "metadata": {},
    "outputs": [
